webrtcincludedir = $(includedir)/webrtc
webrtcinclude_HEADERS = interface/module.h interface/module_common_types.h

SUBDIRS = \
	  audio_coding \
	  audio_processing \
	  audio_device \
	  audio_conference_mixer \
	  bitrate_controller \
	  media_file \
	  remote_bitrate_estimator \
	  rtp_rtcp \
	  udp_transport \
	  video_capture \
	  video_coding \
	  video_processing \
	  video_render \
	  utility
